# cl-simpledb

./: AUTHORS  Makefile.in  README  README.org  bufferpool.lisp  catalog.lisp  compile  compile.lisp  configure.ac  convert.lisp  cursor.lisp  file.lisp  lexer.lisp  make-image.lisp.in  package.lisp  parameters.lisp  parser.lisp  simpledb.asd  simpledb.lisp  test.txt  utils.lisp
data/: first.txt  last.txt  schema.txt
